Feat:fiing the first use creation with contribution but with due status
